--- a/caps.html
+++ b/caps.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Counseling and Psychological Services (CAPS)</title>
+    <title>Home - Counseling and Psychological Services (CAPS) | University of Michigan</title>
 </head>
 <body>
 
